<resources>
    <string name="app_name">Inventory App</string>
    <string name="no_products">No products available.</string>
    <string name="loading_products">Loading products...</string>
    <string name="add_product">Add Product</string>
    <string name="sell_product">Sell</string>
    <string name="dummy_product_name">Sample Product Name</string>
    <string name="dummy_quantity">100 items</string>
    <string name="dummy_price">$ 150.00</string>
    <string name="price_format" formatted="false">$ %.2f</string>
    <string name="quantity_format" formatted="false">%.0f items</string>
    <string name="set_quantity">Enter number of items</string>
    <string name="sell_product_title_format" formatted="false">Sell %s</string>
    <string name="add_product_title_format" formatted="false">Add %s</string>
    <string name="order_product_title_format" formatted="false">Order %s</string>
    <string name="cancel">Cancel</string>
    <string name="sell_title">Sell</string>
    <string name="quantity_required">Quantity is required!</string>
    <string name="not_enough_stocks">Not enough stocks!</string>
    <string name="sell_notification_format" formatted="false">Successfully sold %d %s!</string>
    <string name="add_notification_format" formatted="false">Successfully added %d %s!</string>
    <string name="label_product_name">Product Name</string>
    <string name="label_price">Price</string>
    <string name="label_initial_quantity">Initial Quantity</string>
    <string name="save">Save</string>
    <string name="price_is_required">Price is required!</string>
    <string name="product_name_required">Product name is required!</string>
    <string name="added_product_notif">Added new product named %s</string>
    <string name="order">Order</string>
    <string name="add">Add</string>
    <string name="product_detail">Product Detail</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation_format" formatted="false">Are you sure you want to delete %s?</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="deleted_product_notif" formatted="false">Successfully deleted product %s</string>
    <string name="greater_than_zero">Amount to add should be greater than 0</string>
    <string name="order_product_format" formatted="false">Hi Supplier,\n I want to order %.0f items of %s. \nThanks</string>
    <string name="order_title">Send an order request</string>
</resources>
